enterprise/operator/pkg/lb/testdata/lbservice_translation/20-lb-persistent-backend/input-lbbackend-1.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-1
spec:
  backendType: IP
  backends:
    - ip: 172.18.0.5
      port: 8080
    - ip: 172.18.0.6
      port: 8080
      weight: 2
  healthCheck:
    intervalSeconds: 30
    timeoutSeconds: 5
    healthyThreshold: 1
    unhealthyThreshold: 1
    http:
      host: lb
      path: /healthz
  loadbalancing:
    algorithm:
      consistentHashing: {}
