enterprise/operator/pkg/lb/testdata/lbservice_translation/20-lb-persistent-backend/input-lbbackend-3.yaml
apiVersion: isovalent.com/v1alpha1
kind: LBBackendPool
metadata:
  namespace: default
  name: lb-3
spec:
  backendType: IP
  backends:
    - ip: 172.18.0.7
      port: 8080
    - ip: 172.18.0.8
      port: 8080
      weight: 4
  healthCheck:
    intervalSeconds: 20
    timeoutSeconds: 5
    healthyThreshold: 1
    unhealthyThreshold: 1
    http:
      host: lb
      path: /healthz
  loadbalancing:
    algorithm:
      consistentHashing:
        algorithm:
          maglev:
            tableSize: 10
