enterprise/operator/pkg/lb/testdata/lbservice_translation/20-lb-persistent-backend/output-t2-ciliumenvoyconfig.yaml
apiVersion: cilium.io/v2
kind: CiliumEnvoyConfig
metadata:
  namespace: default
  name: lbfe-lb-1
spec:
  nodeSelector:
    matchLabels:
      service.cilium.io/node: t2
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      address:
        socketAddress:
          address: 100.64.0.100
          portValue: 80
      filterChains:
        - filterChainMatch:
            transportProtocol: raw_buffer
          filters:
            - name: envoy.filters.network.http_connection_manager
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                codecType: HTTP2
                generateRequestId: false
                commonHttpProtocolOptions:
                  headersWithUnderscoresAction: REJECT_REQUEST
                  maxConnectionDuration: 3600s
                http2ProtocolOptions:
                  initialConnectionWindowSize: 1048576
                  initialStreamWindowSize: 65535
                  maxConcurrentStreams: 100
                httpFilters:
                  - name: envoy.filters.http.health_check
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.health_check.v3.HealthCheck
                      clusterMinHealthyPercentages:
                        backend_cluster_http_0:
                          value: 20
                        backend_cluster_http_1:
                          value: 20
                        backend_cluster_http_2:
                          value: 20
                        backend_cluster_tlspt_0:
                          value: 20
                      headers:
                        - name: :path
                          stringMatch:
                            exact: /health
                        - name: :method
                          stringMatch:
                            exact: GET
                        - name: user-agent
                          stringMatch:
                            prefix: cilium-probe/
                      passThroughMode: false
                  - name: envoy.filters.http.router
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                normalizePath: true
                mergeSlashes: true
                useRemoteAddress: true
                rds:
                  routeConfigName: frontend_routeconfig_http
                statPrefix: frontend_listener_http
        - filterChainMatch:
            serverNames:
              - third.acme.io
            transportProtocol: tls
          filters:
            - name: envoy.filters.network.tcp_proxy
              typedConfig:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                accessLog:
                  - name: stdout
                    typedConfig:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                      logFormat:
                        textFormatSource:
                          inlineString: "\n"
                cluster: backend_cluster_tlspt_0
                hashPolicy:
                  - sourceIp: {}
                statPrefix: frontend_listener_tls_passthrough_0
      listenerFilters:
        - name: envoy.filters.listener.tls_inspector
          typedConfig:
            "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
        - name: cilium.bpf_metadata
          typedConfig:
            "@type": type.googleapis.com/cilium.BpfMetadata
      perConnectionBufferLimitBytes: 32768
      name: frontend_listener
    - "@type": type.googleapis.com/envoy.config.route.v3.RouteConfiguration
      name: frontend_routeconfig_http
      virtualHosts:
        - domains:
            - "*"
          name: frontend_virtualhost_http_0
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                prefix: /
              route:
                cluster: backend_cluster_http_0
        - domains:
            - "bar.acme.io"
          name: frontend_virtualhost_http_1
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                path: /api
              route:
                cluster: backend_cluster_http_1
                hashPolicy:
                  - connectionProperties:
                      sourceIp: true
                  - header:
                      headerName: session2
        - domains:
            - "foo.acme.io"
          name: frontend_virtualhost_http_2
          responseHeadersToRemove:
            - x-envoy-upstream-service-time
            - x-envoy-overloaded
          requestHeadersToRemove:
            - x-envoy-internal
            - x-envoy-external-address
          routes:
            - match:
                path: /api
              route:
                cluster: backend_cluster_http_2
                hashPolicy:
                  - connectionProperties:
                      sourceIp: true
                  - cookie:
                      name: session
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          noTrafficInterval: 30s
          timeout: 5s
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      lbPolicy: MAGLEV
      maglevLbConfig:
        tableSize: "65537"
      name: backend_cluster_http_0
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 20s
          noTrafficInterval: 20s
          timeout: 5s
          unhealthyEdgeInterval: 20s
          unhealthyInterval: 20s
          unhealthyThreshold: 1
      lbPolicy: MAGLEV
      maglevLbConfig:
        tableSize: "65537"
      name: backend_cluster_http_1
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 20s
          noTrafficInterval: 20s
          timeout: 5s
          unhealthyEdgeInterval: 20s
          unhealthyInterval: 20s
          unhealthyThreshold: 1
      lbPolicy: MAGLEV
      maglevLbConfig:
        tableSize: "65537"
      name: backend_cluster_http_2
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.cluster.v3.Cluster
      commonLbConfig:
        healthyPanicThreshold: {}
      connectTimeout: 5s
      healthChecks:
        - healthyThreshold: 1
          httpHealthCheck:
            host: lb
            path: /healthz
          interval: 30s
          noTrafficInterval: 30s
          timeout: 5s
          transportSocketMatchCriteria:
            type: tls
          unhealthyEdgeInterval: 30s
          unhealthyInterval: 30s
          unhealthyThreshold: 1
      lbPolicy: MAGLEV
      maglevLbConfig:
        tableSize: "65537"
      name: backend_cluster_tlspt_0
      transportSocketMatches:
        - match:
            type: tls
          name: healthcheck_tls
          transportSocket:
            name: envoy.transport_sockets.tls
            typedConfig:
              "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
      type: EDS
      typedExtensionProtocolOptions:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          commonHttpProtocolOptions:
            maxConnectionDuration: 3600s
          explicitHttpConfig:
            httpProtocolOptions: {}
      perConnectionBufferLimitBytes: 32768
      ignoreHealthOnHostRemoval: true
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_http_0
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.5
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.6
                    portValue: 8080
              loadBalancingWeight: 2
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_http_1
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.7
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.8
                    portValue: 8080
              loadBalancingWeight: 3
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_http_2
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.7
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.8
                    portValue: 8080
              loadBalancingWeight: 4
    - "@type": type.googleapis.com/envoy.config.endpoint.v3.ClusterLoadAssignment
      clusterName: backend_cluster_tlspt_0
      endpoints:
        - lbEndpoints:
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.5
                    portValue: 8080
              loadBalancingWeight: 1
            - endpoint:
                address:
                  socketAddress:
                    address: 172.18.0.6
                    portValue: 8080
              loadBalancingWeight: 2
